Criando processo de login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^2.3.2
   http: ^0.13.4
   mask_text_input_formatter: ^2.3.0
+  logger: ^1.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
